Gradle配置添加说明注释/笔记